Introduced many functions to make the code readable and efficient , changed the hard coded booleans sent from frontend to the backend for replying message purposes . fixed the problem of active users not reflecting back on frontend when user count in a room changes. Now sending the message objects and file objects from the backend to frontend instead of directly sending 7-8 parameters. Edit message now working for strings containing inverted commas because of event delegation.

--- a/public/index.css
+++ b/public/index.css
@@ -11,9 +11,8 @@ body {
     overflow-y: auto;
 }
 
-
 .loading-container {
-    position: relative;
+    position: absolute;
     margin: auto;
     width: 200px;
     height: 200px;
